add translate file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon"  href="/src/images/devconnect.png" />
